--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three.js Scene</title>
     <style>
-        body { margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #202020; }
-        #scene-container { width: 80vw; height: 60vh; border: 2px solid white; }
+        body { margin: 0; display: flex; justify-content: left; align-items: bottom; height: 100%; background-color: #202020; }
+        #scene-container { width: 80vw; height: 80vh; border: 2px solid white; }
     </style>
 </head>
 <body>
