project reorganization with multiple tabs now

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Scene</title>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="../styles.css">
     <style>
-        body { margin: 0; display: flex; justify-content: left; align-items: bottom; height: 100%; background-color: #202020; }
-        #scene-container { width: 80vw; height: 80vh; border: 2px solid white; }
+        body { height: 100%; background-color: #202020; }
     </style>
 </head>
 <body>
-    <div id="scene-container"></div>
-    <script type="module" src="scene.js"></script>
+    <div class="navbar">
+        <h1>Welcome to Conklin's Website</h1>
+        <a href="index.html">Home</a>
+        <a href="rubix\rubix_scene.html" class="link">Go to Rubix</a>
+        <a href="osrs\osrs_scene.html" class="link">Go to OSRS</a>
+    </div>
 </body>
 </html>
