--- a/public/rubix/rubix_scene.html
+++ b/public/rubix/rubix_scene.html
@@ -17,6 +17,11 @@
         <a href="../osrs/osrs_scene.html" class="link">Go to OSRS</a>
     </div>
     <div id="scene-container"></div>
+    <div id="RotationAxisSelectionContainer">
+        <button data-axis="x">X-Axis</button>
+        <button data-axis="y">Y-Axis</button>
+        <button data-axis="z">Z-Axis</button>
+    </div>
     <script type="module" src="rubix_scene.js"></script>
 </body>
 </html>
