--- a/public/rubix/rubix_scene.html
+++ b/public/rubix/rubix_scene.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Scene</title>
+    <title>Rubix Cube Scene</title>
     <style>
         body { height: 100%; background-color: #202020; }
         #scene-container { width: 80vw; height: 80vh; border: 2px solid white; }
