made a scramble function and also setup the camera to be slightly rotated for better presentation quality.

--- a/public/rubix/rubix_scene.html
+++ b/public/rubix/rubix_scene.html
@@ -20,8 +20,9 @@
     <div id="RotationAxisSelectionContainer">
         <button data-axis="x">X-Axis</button>
         <button data-axis="y">Y-Axis</button>
-        <button data-axis="z">Z-Axis</button>
+        <button data-axis="z">Z-Axis</button>    
     </div>
+    <button id="Scramble">Scramble</button>
     <script type="module" src="rubix_scene.js"></script>
 </body>
 </html>
