--- a/public/osrs/osrs_scene.html
+++ b/public/osrs/osrs_scene.html
@@ -17,7 +17,7 @@
         <a href="../rubix/rubix_scene.html" class="link">Go to Rubix</a>
         <a href="../osrs/osrs_scene.html" class="link">Go to OSRS</a>
     </div>
-    <div id="scene-container"></div>
-    <script type="module" src="osrs_scene.js"></script>
+    <!-- <div id="scene-container"></div> -->
+    <p style="color: whitesmoke;">&nbsp;Someday this will be a page documenting the progress of my UIM account for old school runescape. Today, the page is not finished.</p>
 </body>
 </html>
