added some extra pages for sub-projects

--- a/public/Ideas/Ideas.html
+++ b/public/Ideas/Ideas.html
@@ -11,11 +11,10 @@
 </head>
 <body>
     <div class="navbar">
-        <h1>Welcome to Conklin's Website</h1>
-        <a href="index.html">Home</a>
-        <a href="rubix\rubix_scene.html" class="link">Go to Rubix</a>
-        <a href="osrs\osrs_scene.html" class="link">Go to OSRS</a>
-        <a href="ideas\ideas.html" class="link">Go to Ideas</a>
+        <h1>Here are some Ideas I have been working on. Return <a href="../index.html" style="all: unset;cursor: pointer; text-decoration: underline;">Home</a> to see other media.</h1>
+        <a href="../index.html">Home</a>
+        <a href="1\1.html" class="link">1</a>
+
     </div>
 </body>
 </html>
