--- a/public/osrs/osrs_scene.html
+++ b/public/osrs/osrs_scene.html
@@ -15,7 +15,7 @@
     <div class="navbar">
         <a href="../index.html">Home</a>
         <a href="../rubix/rubix_scene.html" class="link">Go to Rubix</a>
-        <a href="../osrs/osrs_scene.html" class="link">Go to OSRS</a>
+        <a href="../osrs/osrs_scene.html" class="link">Refresh OSRS</a>
     </div>
     <!-- <div id="scene-container"></div> -->
     <p style="color: whitesmoke;">&nbsp;Someday this will be a page documenting the progress of my UIM account for old school runescape. Today, the page is not finished.</p>
