--- a/public/rubix/rubix_scene.html
+++ b/public/rubix/rubix_scene.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navbar">
         <a href="../index.html">Home</a>
-        <a href="../rubix/rubix_scene.html" class="link">Go to Rubix</a>
+        <a href="../rubix/rubix_scene.html" class="link">Refresh Rubix</a>
         <a href="../osrs/osrs_scene.html" class="link">Go to OSRS</a>
     </div>
     <div id="scene-container"></div>
